feat: add redis implementation
