# docs/swagger.json
@@ -276,7 +276,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.WalletReq"
+                            "$ref": "#/definitions/entity.TodoListReq"
                         }
                     }
                 ],
@@ -331,7 +331,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.WalletReq"
+                            "$ref": "#/definitions/entity.TodoListReq"
                         }
                     }
                 ],
@@ -347,7 +347,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/entity.WalletReq"
+                                            "$ref": "#/definitions/entity.TodoListReq"
                                         }
                                     }
                                 }
@@ -612,6 +612,29 @@
                 }
             }
         },
+        "entity.TodoListReq": {
+            "type": "object",
+            "required": [
+                "description",
+                "doing_at",
+                "title",
+                "user_id"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "doing_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.TodoListResponse": {
             "type": "object",
             "properties": {
@@ -631,21 +654,6 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.WalletReq": {
-            "type": "object",
-            "required": [
-                "balance",
-                "user_name"
-            ],
-            "properties": {
-                "balance": {
-                    "type": "integer"
-                },
-                "user_name": {
                     "type": "string"
                 }
             }
